--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
   <parent>
     <groupId>org.jboss</groupId>
     <artifactId>jboss-parent</artifactId>
-    <version>16.0.0.redhat-1</version>
-    <relativePath/>
+    <version>19.0.0.redhat-1</version>
   </parent>
 
   <groupId>org.codehaus.jackson</groupId>
@@ -116,21 +115,6 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <executions>
-<!--
-          <execution>
-            <id>regex-version-property</id>
-            <goals>
-              <goal>regex-property</goal>
-            </goals>
-            <configuration>
-              <name>base.version</name>
-              <value>${project.version}</value>
-              <regex>(^.*)(.redhat.*)$</regex>
-              <replacement>$1</replacement>
-              <failIfNoMatch>true</failIfNoMatch>
-            </configuration>
-          </execution>
--->
           <execution>
             <id>regex-property</id>
             <goals>
@@ -195,15 +179,6 @@
                   <version>${version.junit}</version>
                   <outputDirectory>${project.basedir}/lib/junit</outputDirectory>
                 </artifactItem>
-<!--
-                <artifactItem>
-                  <groupId>asm</groupId>
-                  <artifactId>asm</artifactId>
-                  <version>${version.asm}</version>
-                  <destFileName>jackson-asm-${version.asm}.jar</destFileName>
-                  <outputDirectory>${project.basedir}/lib/repackaged</outputDirectory>
-                </artifactItem>
--->
                 <artifactItem>
                   <groupId>asm</groupId>
                   <artifactId>asm</artifactId>
@@ -239,7 +214,6 @@
         </executions>
         <inherited>false</inherited>
       </plugin>
-<!--
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <executions>
@@ -257,7 +231,6 @@
         </executions>
         <inherited>false</inherited>
       </plugin>
--->
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
@@ -286,6 +259,7 @@
                 <property name="ant.build.javac.source" value="1.6"></property>
                 <property name="ant.build.javac.target" value="1.6"></property>
                 <property name="IMPL_VERSION" value="${project.version}"></property>
+                <ant antfile="ant/build-jarjar-asm.xml" dir="${project.basedir}" target="repackage-asm" inheritAll="true"></ant>
                 <ant antfile="build.xml" dir="${project.basedir}" target="dist" inheritAll="true"></ant>
               </target>
             </configuration>
@@ -318,7 +292,7 @@
             </goals>
             <configuration>
               <file>${project.basedir}/dist/jackson-core-asl-${project.version}.jar</file>
-              <!-- <javadoc>${project.basedir}/dist/jackson-core-asl-${project.version}-javadoc.jar</javadoc> -->
+              <javadoc>${project.basedir}/dist/jackson-core-asl-${project.version}-javadoc.jar</javadoc>
               <sources>${project.basedir}/dist/jackson-core-asl-${project.version}-sources.jar</sources>
               <pomFile>${project.basedir}/dist/jackson-core-asl-${project.version}.pom</pomFile>
               <url>${maven.deploy.url}</url>
@@ -358,7 +332,7 @@
             </goals>
             <configuration>
               <file>${project.basedir}/dist/jackson-mapper-asl-${project.version}.jar</file>
-              <!-- <javadoc>${project.basedir}/dist/jackson-mapper-asl-${project.version}-javadoc.jar</javadoc> -->
+              <javadoc>${project.basedir}/dist/jackson-mapper-asl-${project.version}-javadoc.jar</javadoc>
               <sources>${project.basedir}/dist/jackson-mapper-asl-${project.version}-sources.jar</sources>
               <pomFile>${project.basedir}/dist/jackson-mapper-asl-${project.version}.pom</pomFile>
               <url>${maven.deploy.url}</url>
