--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jboss</groupId>
     <artifactId>jboss-parent</artifactId>
-    <version>19.0.0.redhat-1</version>
+    <version>19</version>
   </parent>
 
   <groupId>org.codehaus.jackson</groupId>
@@ -113,6 +113,7 @@
       </plugins>
     </pluginManagement>
     <plugins>
+<!--
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -132,6 +133,7 @@
           </execution>
         </executions>
       </plugin>
+-->
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
